--- a/aws/Vault-Single-Deployment.yaml
+++ b/aws/Vault-Single-Deployment.yaml
@@ -504,29 +504,37 @@ Resources:
       UserData: !Base64
         Fn::Sub: |-
           <powershell>
+          # Configure logging
           Set-PSDebug -Trace 1
-          $FirstBootFile = $env:SystemRoot + "\Temp\FirstBoot_" + (Get-Date).ToString("yyyy-MM-dd-hh-mm")
-          New-Item $FirstBootFile -ItemType file
           $LogFile = "C:\CyberArk\Deployment\Logs\userdata.log"
+          New-Item $LogFile -ItemType file
+          
           # Ensure AmazonSSMAgent is enabled and running
           Set-Service AmazonSSMAgent -StartupType Automatic
           Start-Service AmazonSSMAgent
           WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "AmazonSSMAgent state verified successfully"
-          # # Execute configSSMAndHostname commands
-          # powershell.exe -File C:\CyberArk\Deployment\CloudWatch.ps1 -LogGroup ${LogGroup} -CfnInitLogStream ${CfnInitLogStream} -VaultPostInstallLogStream ${VaultPostInstallLogStream} -VaultInitLogStream ${VaultInitLogStream} -Region ${AWS::Region}
-          # powershell.exe -Command "Set-DnsClientGlobalSetting -SuffixSearchList ((Get-DnsClientGlobalSetting).SuffixSearchList += 'pas.local')"
+          
+          # Execute configCW commands
+          C:\CyberArk\Deployment\CloudWatch.ps1 -LogGroup ${LogGroup} -CfnInitLogStream ${CfnInitLogStream} -VaultPostInstallLogStream ${VaultPostInstallLogStream} -VaultInitLogStream ${VaultInitLogStream} -Region ${AWS::Region}
+          WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "CloudWatch configuration completed successfully"
 
-          # # Execute configServices commands
-          # powershell.exe -File C:\CyberArk\Deployment\VaultInit.ps1 -VaultFilesBucket ${VaultFilesBucket} -LicenseFileKey ${LicenseFile} -RecoveryPublicKey ${RecoveryPublicKey} -Region ${AWS::Region}
-          # powershell.exe -File C:\CyberArk\Deployment\FixENE.ps1
+          # Execute configServices commands
+          C:\CyberArk\Deployment\VaultInit.ps1 -VaultFilesBucket ${VaultFilesBucket} -LicenseFileKey ${LicenseFile} -RecoveryPublicKey ${RecoveryPublicKey} -Region ${AWS::Region}
+          C:\CyberArk\Deployment\FixENE.ps1
+          WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "VaultInit configuration completed successfully"
 
-          # # Execute postInstall commands
-          # powershell.exe -File C:\CyberArk\Deployment\VaultPostInstall.ps1 -IsPrimaryOrDR "Primary" -SSMMasterPassParameterID ${StoreMasterPassword.SsmId} -SSMAdminPassParameterID ${StoreAdminPassword.SsmId} -SSMDRPassParameterID ${StoreDRPassword.SsmId} -LicensePath "C:\CyberArk\Deployment\vaultLicense.xml" -RecoveryPublicKeyPath "C:\CyberArk\Deployment\recoveryPublic.key" -Region ${AWS::Region} ${Secret}
-          # powershell.exe -File C:\CyberArk\Deployment\VaultTagKMS.ps1 -Role ${VaultInstancesRole} -Region ${AWS::Region}
-          # powershell.exe -Command Rename-Computer -NewName ${VaultHostname} -Force -Restart
-
-          # Signal completion to CloudFormation
+          # Execute postInstall commands
+          C:\CyberArk\Deployment\VaultPostInstall.ps1 -IsPrimaryOrDR "Primary" -SSMMasterPassParameterID ${StoreMasterPassword.SsmId} -SSMAdminPassParameterID ${StoreAdminPassword.SsmId} -SSMDRPassParameterID ${StoreDRPassword.SsmId} -LicensePath "C:\CyberArk\Deployment\vaultLicense.xml" -RecoveryPublicKeyPath "C:\CyberArk\Deployment\recoveryPublic.key" -Region ${AWS::Region} ${Secret}
+          C:\CyberArk\Deployment\VaultTagKMS.ps1 -Role ${VaultInstancesRole} -Region ${AWS::Region}
+          WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "VaultPostInstall configuration completed successfully"
+          
+          # Execute configHostname commands
+          Rename-Computer -NewName ${VaultHostname} -Force
+          WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "Hostname configuration completed successfully"
+          
+          # Signal completion to CloudFormation and reboot
           cfn-signal.exe --stack ${AWS::StackName} --success true --resource VaultMachine --region ${AWS::Region}
+          Restart-Computer -ComputerName $ComputerName -Force
           </powershell>
       KeyName: !Ref 'KeyName'
       IamInstanceProfile: !Ref 'VaultInstancesProfile'
