--- a/aws/Vault-Single-Deployment.yaml
+++ b/aws/Vault-Single-Deployment.yaml
@@ -7,11 +7,11 @@ Resources:
       RetentionInDays: 30
     DeletionPolicy: Retain
     UpdateReplacePolicy: Retain
-  CfnInitLogStream:
+  UserDataLogStream:
     Type: AWS::Logs::LogStream
     Properties:
       LogGroupName: !Sub '${LogGroup}'
-      LogStreamName: VaultMachine/CfnInitLog
+      LogStreamName: VaultMachine/UserDataLog
     UpdateReplacePolicy: Retain
     DeletionPolicy: Retain
   VaultInitLogStream:
@@ -504,37 +504,54 @@ Resources:
       UserData: !Base64
         Fn::Sub: |-
           <powershell>
-          # Configure logging
-          Set-PSDebug -Trace 1
-          $LogFile = "C:\CyberArk\Deployment\Logs\userdata.log"
-          New-Item $LogFile -ItemType file
-          
-          # Ensure AmazonSSMAgent is enabled and running
-          Set-Service AmazonSSMAgent -StartupType Automatic
-          Start-Service AmazonSSMAgent
-          WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "AmazonSSMAgent state verified successfully"
-          
-          # Execute configCW commands
-          C:\CyberArk\Deployment\CloudWatch.ps1 -LogGroup ${LogGroup} -CfnInitLogStream ${CfnInitLogStream} -VaultPostInstallLogStream ${VaultPostInstallLogStream} -VaultInitLogStream ${VaultInitLogStream} -Region ${AWS::Region}
-          WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "CloudWatch configuration completed successfully"
+          C:\CyberArk\Deployment\UserDataScript.ps1 `
+            -VaultFilesBucket ${VaultFilesBucket} `
+            -LicenseFileKey ${LicenseFile} `
+            -RecoveryPublicKey ${RecoveryPublicKey} `
+            -Region ${AWS::Region} `
+            -LogGroup ${LogGroup} `
+            -UserDataLogStream ${UserDataLogStream} `
+            -VaultInitLogStream ${VaultInitLogStream} `
+            -VaultPostInstallLogStream ${VaultPostInstallLogStream} `
+            -SSMMasterPassParameterID ${StoreMasterPassword.SsmId} `
+            -SSMAdminPassParameterID ${StoreAdminPassword.SsmId} `
+            -SSMDRPassParameterID ${StoreDRPassword.SsmId} `
+            -Secret ${Secret} `
+            -VaultInstancesRole ${VaultInstancesRole} `
+            -VaultHostname ${VaultHostname} `
+            -StackName ${AWS::StackName}
 
-          # Execute configServices commands
-          C:\CyberArk\Deployment\VaultInit.ps1 -VaultFilesBucket ${VaultFilesBucket} -LicenseFileKey ${LicenseFile} -RecoveryPublicKey ${RecoveryPublicKey} -Region ${AWS::Region}
-          C:\CyberArk\Deployment\FixENE.ps1
-          WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "VaultInit configuration completed successfully"
+          # # Configure logging
+          # Set-PSDebug -Trace 1
+          # $LogFile = "C:\CyberArk\Deployment\Logs\userdata.log"
+          # New-Item $LogFile -ItemType file
+          
+          # # Ensure AmazonSSMAgent is enabled and running
+          # Set-Service AmazonSSMAgent -StartupType Automatic
+          # Start-Service AmazonSSMAgent
+          # WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "AmazonSSMAgent state verified successfully"
+          
+          # # Execute configCW commands
+          # C:\CyberArk\Deployment\CloudWatch.ps1 -LogGroup ${LogGroup} -UserDataLogStream ${UserDataLogStream} -VaultPostInstallLogStream ${VaultPostInstallLogStream} -VaultInitLogStream ${VaultInitLogStream} -Region ${AWS::Region}
+          # WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "CloudWatch configuration completed successfully"
 
-          # Execute postInstall commands
-          C:\CyberArk\Deployment\VaultPostInstall.ps1 -IsPrimaryOrDR "Primary" -SSMMasterPassParameterID ${StoreMasterPassword.SsmId} -SSMAdminPassParameterID ${StoreAdminPassword.SsmId} -SSMDRPassParameterID ${StoreDRPassword.SsmId} -LicensePath "C:\CyberArk\Deployment\vaultLicense.xml" -RecoveryPublicKeyPath "C:\CyberArk\Deployment\recoveryPublic.key" -Region ${AWS::Region} ${Secret}
-          C:\CyberArk\Deployment\VaultTagKMS.ps1 -Role ${VaultInstancesRole} -Region ${AWS::Region}
-          WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "VaultPostInstall configuration completed successfully"
+          # # Execute configServices commands
+          # C:\CyberArk\Deployment\VaultInit.ps1 -VaultFilesBucket ${VaultFilesBucket} -LicenseFileKey ${LicenseFile} -RecoveryPublicKey ${RecoveryPublicKey} -Region ${AWS::Region}
+          # C:\CyberArk\Deployment\FixENE.ps1
+          # WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "VaultInit configuration completed successfully"
+
+          # # Execute postInstall commands
+          # C:\CyberArk\Deployment\VaultPostInstall.ps1 -IsPrimaryOrDR "Primary" -SSMMasterPassParameterID ${StoreMasterPassword.SsmId} -SSMAdminPassParameterID ${StoreAdminPassword.SsmId} -SSMDRPassParameterID ${StoreDRPassword.SsmId} -LicensePath "C:\CyberArk\Deployment\vaultLicense.xml" -RecoveryPublicKeyPath "C:\CyberArk\Deployment\recoveryPublic.key" -Region ${AWS::Region} ${Secret}
+          # C:\CyberArk\Deployment\VaultTagKMS.ps1 -Role ${VaultInstancesRole} -Region ${AWS::Region}
+          # WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "VaultPostInstall configuration completed successfully"
           
-          # Execute configHostname commands
-          Rename-Computer -NewName ${VaultHostname} -Force
-          WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "Hostname configuration completed successfully"
+          # # Execute configHostname commands
+          # Rename-Computer -NewName ${VaultHostname} -Force
+          # WriteLog -LogFile $LogFile -LogLevel "INFO" -Log "Hostname configuration completed successfully"
           
-          # Signal completion to CloudFormation and reboot
-          cfn-signal.exe --stack ${AWS::StackName} --success true --resource VaultMachine --region ${AWS::Region}
-          Restart-Computer -ComputerName $ComputerName -Force
+          # # Signal completion to CloudFormation and reboot
+          # cfn-signal.exe --stack ${AWS::StackName} --success true --resource VaultMachine --region ${AWS::Region}
+          # Restart-Computer -Force
           </powershell>
       KeyName: !Ref 'KeyName'
       IamInstanceProfile: !Ref 'VaultInstancesProfile'
