--- a/aws/Vault-Single-Deployment.yaml
+++ b/aws/Vault-Single-Deployment.yaml
@@ -501,33 +501,33 @@ Resources:
           - !Ref VaultAmi
           - !Ref VaultCustomAmi
       InstanceType: !Ref 'VaultInstanceType'
-      UserData: !Base64
-        Fn::Sub: |-
+      UserData:
+        Fn::Base64: !Sub |
           <powershell>
-          $params = @(
-            "-IsPrimaryOrDR 'Primary'",
-            "-VaultFilesBucket ${VaultFilesBucket}",
-            "-LicenseFileKey ${LicenseFile}",
-            "-RecoveryPublicKey ${RecoveryPublicKey}",
-            "-Region ${AWS::Region}",
-            "-LogGroup ${LogGroup}",
-            "-UserDataLogStream ${UserDataLogStream}",
-            "-VaultInitLogStream ${VaultInitLogStream}",
-            "-VaultPostInstallLogStream ${VaultPostInstallLogStream}",
-            "-SSMMasterPassParameterID ${StoreMasterPassword.SsmId}",
-            "-SSMAdminPassParameterID ${StoreAdminPassword.SsmId}",
-            "-SSMDRPassParameterID ${StoreDRPassword.SsmId}",
-            "-VaultInstancesRole ${VaultInstancesRole}",
-            "-VaultHostname ${VaultHostname}",
-            "-StackName ${AWS::StackName}"
-          )
-
-          $SecretEmpty = ${SecretEmpty}
-          if ($SecretEmpty -eq $false) {
-            $params += "-SSMSecretParameterID ${StoreSecret.SsmId}"
+          $UserDataParams = @{
+            "IsPrimaryOrDR"             = "Primary"
+            "VaultFilesBucket"          = "${VaultFilesBucket}"
+            "LicenseFileKey"            = "${LicenseFile}"
+            "RecoveryPublicKey"         = "${RecoveryPublicKey}"
+            "Region"                    = "${AWS::Region}"
+            "LogGroup"                  = "${LogGroup}"
+            "UserDataLogStream"         = "${UserDataLogStream}"
+            "VaultInitLogStream"        = "${VaultInitLogStream}"
+            "VaultPostInstallLogStream" = "${VaultPostInstallLogStream}"
+            "SSMMasterPassParameterID"  = "${StoreMasterPassword.SsmId}"
+            "SSMAdminPassParameterID"   = "${StoreAdminPassword.SsmId}"
+            "SSMDRPassParameterID"      = "${StoreDRPassword.SsmId}"
+            "VaultInstancesRole"        = "${VaultInstancesRole}"
+            "VaultHostname"             = "${VaultHostname}"
+            "StackName"                 = "${AWS::StackName}"
           }
 
-          C:\CyberArk\Deployment\UserDataScript.ps1 @params
+          # $SecretSsmId = ${!If SecretEmpty, '', StoreSecret.SsmId}
+          # if ($SecretSsmId) {
+          #   $UserDataParams.Add("SSMSecretParameterID","$SecretSsmId")
+          # }
+
+          C:\CyberArk\Deployment\UserDataScript.ps1 @UserDataParams
           </powershell>
       KeyName: !Ref 'KeyName'
       IamInstanceProfile: !Ref 'VaultInstancesProfile'
