--- a/aws/Full-PAS-Deployment.yaml
+++ b/aws/Full-PAS-Deployment.yaml
@@ -49,25 +49,25 @@ Resources:
       LogGroupName: !Sub '${LogGroup}'
       LogStreamName: PSMMachine/PSMRegistrationLog
     DeletionPolicy: Retain
-  PVWACfnInitLogStream:
+  PVWAUserDataLogStream:
     Type: AWS::Logs::LogStream
     Properties:
       LogGroupName: !Sub '${LogGroup}'
-      LogStreamName: PVWAMachine/PVWACfnInitLogStream
+      LogStreamName: PVWAMachine/UserDataLog
     DeletionPolicy: Retain
-  PVWAConfigurationsLog:
+  PVWAConfigurationsLogStream:
     Type: AWS::Logs::LogStream
     Properties:
       LogGroupName: !Sub '${LogGroup}'
       LogStreamName: PVWAMachine/PVWAConfigurationsLog
     DeletionPolicy: Retain
-  PVWARegistrationLog:
+  PVWARegistrationLogStream:
     Type: AWS::Logs::LogStream
     Properties:
       LogGroupName: !Sub '${LogGroup}'
       LogStreamName: PVWAMachine/PVWARegistrationLog
     DeletionPolicy: Retain
-  PVWASetLocalServiceLog:
+  PVWASetLocalServiceLogStream:
     Type: AWS::Logs::LogStream
     Properties:
       LogGroupName: !Sub '${LogGroup}'
@@ -329,7 +329,7 @@ Resources:
             Resource:
               - !Sub 'arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/*'
       Roles:
-        - !Ref ComponentInstanceRole
+        - !Ref ComponentInstancesRole
     DeletionPolicy: Retain
   LambdaDeployRole:
     Type: AWS::IAM::Role
@@ -543,7 +543,7 @@ Resources:
                   - iam:PutRolePolicy
                 Resource: '*'
     DeletionPolicy: Retain
-  ComponentInstanceRole:
+  ComponentInstancesRole:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
@@ -576,7 +576,7 @@ Resources:
     Type: AWS::IAM::InstanceProfile
     Properties:
       Roles:
-        - !Ref ComponentInstanceRole
+        - !Ref ComponentInstancesRole
     DeletionPolicy: Retain
   StorePasswordLambda:
     Type: AWS::Lambda::Function
@@ -901,85 +901,101 @@ Resources:
           - !Ref PVWAAmi
           - !Ref PVWACustomAmi
       InstanceType: !Ref PVWAInstanceType
-      UserData: !Base64
-        'Fn::Sub': >-
-          <script>
-          cfn-init.exe -v -s ${AWS::StackId} -r PVWAMachine --configsets ascending --region ${AWS::Region}
-          </script>
+      UserData:
+        Fn::Base64: !Sub
+          - |
+            <powershell>
+            $UserDataParams = @{
+              "Region"                        = "${AWS::Region}"
+              "LogGroup"                      = "${LogGroup}"
+              "UserDataLogStream"             = "${PVWAUserDataLogStream}"
+              "PVWAConfigurationsLogStream"   = "${PVWAConfigurationsLogStream}"
+              "PVWARegistrationLogStream"     = "${PVWARegistrationLogStream}"
+              "PVWASetLocalServiceLogStream"  = "${PVWASetLocalServiceLogStream}"
+              "VaultAdminUser"                = "Administrator"
+              "SSMAdminPassParameterID"       = "${StoreAdminPassword.SsmId}"
+              "VaultPrivateIP"                = "${VaultIpAddress}"
+              "ComponentInstancesRole"        = "${ComponentInstancesRole}"
+              "ComponentHostname"             = "${PVWAHostname}"
+              "StackName"                     = "${AWS::StackName}"
+            }
+            C:\CyberArk\Deployment\UserDataScript.ps1 @UserDataParams
+            </powershell>
+          - VaultIpAddress: !Sub '${VaultMachine.PrivateIp},${VaultDRMachine.PrivateIp}'
       KeyName: !Ref KeyName
       IamInstanceProfile: !Ref ComponentInstanceProfile
-    Metadata:
-      'AWS::CloudFormation::Init':
-        configSets:
-          ascending:
-            - configSSMAndHostname
-            - configServices
-            - configSignal
-        configSSMAndHostname:
-          services:
-            windows:
-              AmazonSSMAgent:
-                enabled: true
-                ensureRunning: true
-                files:
-                  - C:\Program Files\Amazon\SSM\Plugins\awsCloudWatch\AWS.EC2.Windows.CloudWatch.json
-          commands:
-            1-cloudwatch:
-              command: !Sub >
-                powershell.exe -File C:\CyberArk\Deployment\CloudWatch.ps1
-                -LogGroup ${LogGroup} -PVWACfnInitLogStream
-                ${PVWACfnInitLogStream} -PVWAConfiguration
-                ${PVWAConfigurationsLog} -PVWARegistration
-                ${PVWARegistrationLog} -PVWASetLocalService
-                ${PVWASetLocalServiceLog} -Region ${AWS::Region}
-            2-restartSSM:
-              command: powershell.exe -Command "Restart-Service AmazonSSMAgent"
-              waitAfterCompletion: 60
-              ignoreErrors: true
-            3-addDNSSuffix:
-              command: powershell.exe -Command "Set-DnsClientGlobalSetting -SuffixSearchList ((Get-DnsClientGlobalSetting).SuffixSearchList += 'pas.local')"
-        configServices:
-          commands:
-            1-configurePVWAService:
-              command: powershell.exe -File C:\CyberArk\Deployment\Set-LocalService.ps1 -Username "PVWAReportsUser" -Services "CyberArk Scheduled Tasks"
-              waitAfterCompletion: 0
-            2-configuration:
-              command: !Sub
-                - >-
-                  powershell.exe -File
-                  C:\CyberArk\Deployment\PVWAConfiguration.ps1 -VaultIpAddress
-                  ${VaultIpAddress} -VaultAdminUser Administrator -VaultPort 1858 -HostName ${PVWAHostname}
-                - VaultIpAddress: !Sub '${VaultMachine.PrivateIp},${VaultDRMachine.PrivateIp}'
-              waitAfterCompletion: 0
-            3-registration:
-              command: !Sub >
-                powershell.exe -File C:\CyberArk\Deployment\PVWARegistration.ps1
-                -VaultAdminUser Administrator -SSMAdminPassParameterID ${StoreAdminPassword.SsmId}
-              waitAfterCompletion: 0
-            4-startAppPool:
-              command: >-
-                powershell -Command "& {&'Import-Module' WebAdministration}"; "&
-                {&'Start-WebAppPool' -Name PasswordVaultWebAccessPool}"; "&
-                {&'Set-ItemProperty' -Path
-                IIS:\AppPools\PasswordVaultWebAccessPool -Name autoStart -Value
-                'true'}"
-              waitAfterCompletion: 0
-            5-CSTserviceConfig:
-              command: sc config "CyberArk Scheduled Tasks" start=auto
-              waitAfterCompletion: 0
-            6-ChangeHostname:
-              command: !Sub >
-                powershell.exe -Command Rename-Computer -NewName ${PVWAHostname} -Force -Restart
-              waitAfterCompletion: forever
-        configSignal:
-          commands:
-            0-signalCompletion:
-              command: !Sub >
-                "C:\Program Files\Amazon\cfn-bootstrap\cfn-signal.exe" -e %ERRORLEVEL% --stack ${AWS::StackId} --resource PVWAMachine --region ${AWS::Region}
-              waitAfterCompletion: 0
+    # Metadata:
+    #   'AWS::CloudFormation::Init':
+    #     configSets:
+    #       ascending:
+    #         - configSSMAndHostname
+    #         - configServices
+    #         - configSignal
+    #     configSSMAndHostname:
+    #       services:
+    #         windows:
+    #           AmazonSSMAgent:
+    #             enabled: true
+    #             ensureRunning: true
+    #             files:
+    #               - C:\Program Files\Amazon\SSM\Plugins\awsCloudWatch\AWS.EC2.Windows.CloudWatch.json
+    #       commands:
+    #         1-cloudwatch:
+    #           command: !Sub >
+    #             powershell.exe -File C:\CyberArk\Deployment\CloudWatch.ps1
+    #             -LogGroup ${LogGroup} -PVWACfnInitLogStream
+    #             ${PVWACfnInitLogStream} -PVWAConfiguration
+    #             ${PVWAConfigurationsLog} -PVWARegistration
+    #             ${PVWARegistrationLog} -PVWASetLocalService
+    #             ${PVWASetLocalServiceLog} -Region ${AWS::Region}
+    #         2-restartSSM:
+    #           command: powershell.exe -Command "Restart-Service AmazonSSMAgent"
+    #           waitAfterCompletion: 60
+    #           ignoreErrors: true
+    #         3-addDNSSuffix:
+    #           command: powershell.exe -Command "Set-DnsClientGlobalSetting -SuffixSearchList ((Get-DnsClientGlobalSetting).SuffixSearchList += 'pas.local')"
+    #     configServices:
+    #       commands:
+    #         1-configurePVWAService:
+    #           command: powershell.exe -File C:\CyberArk\Deployment\Set-LocalService.ps1 -Username "PVWAReportsUser" -Services "CyberArk Scheduled Tasks"
+    #           waitAfterCompletion: 0
+    #         2-configuration:
+    #           command: !Sub
+    #             - >-
+    #               powershell.exe -File
+    #               C:\CyberArk\Deployment\PVWAConfiguration.ps1 -VaultIpAddress
+    #               ${VaultIpAddress} -VaultAdminUser Administrator -VaultPort 1858 -HostName ${PVWAHostname}
+    #             - VaultIpAddress: !Sub '${VaultMachine.PrivateIp},${VaultDRMachine.PrivateIp}'
+    #           waitAfterCompletion: 0
+    #         3-registration:
+    #           command: !Sub >
+    #             powershell.exe -File C:\CyberArk\Deployment\PVWARegistration.ps1
+    #             -VaultAdminUser Administrator -SSMAdminPassParameterID ${StoreAdminPassword.SsmId}
+    #           waitAfterCompletion: 0
+    #         4-startAppPool:
+    #           command: >-
+    #             powershell -Command "& {&'Import-Module' WebAdministration}"; "&
+    #             {&'Start-WebAppPool' -Name PasswordVaultWebAccessPool}"; "&
+    #             {&'Set-ItemProperty' -Path
+    #             IIS:\AppPools\PasswordVaultWebAccessPool -Name autoStart -Value
+    #             'true'}"
+    #           waitAfterCompletion: 0
+    #         5-CSTserviceConfig:
+    #           command: sc config "CyberArk Scheduled Tasks" start=auto
+    #           waitAfterCompletion: 0
+    #         6-ChangeHostname:
+    #           command: !Sub >
+    #             powershell.exe -Command Rename-Computer -NewName ${PVWAHostname} -Force -Restart
+    #           waitAfterCompletion: forever
+    #     configSignal:
+    #       commands:
+    #         0-signalCompletion:
+    #           command: !Sub >
+    #             "C:\Program Files\Amazon\cfn-bootstrap\cfn-signal.exe" -e %ERRORLEVEL% --stack ${AWS::StackId} --resource PVWAMachine --region ${AWS::Region}
+    #           waitAfterCompletion: 0
     CreationPolicy:
       ResourceSignal:
-        Timeout: PT25M
+        Timeout: PT10M
     DeletionPolicy: Retain
     DependsOn:
       - VaultDRMachine
