remove admin password depend on PSM

--- a/aws/Full-PAS-Deployment.yaml
+++ b/aws/Full-PAS-Deployment.yaml
@@ -224,6 +224,7 @@ Resources:
       - LambdaDeployRole
       - StorePasswordLambda
       - CPMMachine
+      - PSMMachine
       - PSMPMachine
       - PTAMachine
   CleanDRPassword:
