--- a/aws/PAS-Component-Single-Deployment.yaml
+++ b/aws/PAS-Component-Single-Deployment.yaml
@@ -409,8 +409,7 @@ Resources:
                 -LogGroup ${LogGroup} -PVWACfnInitLogStream
                 ${PVWACfnInitLogStreamLog} -PVWAConfiguration
                 ${PVWAConfigurationsLog} -PVWARegistration
-                ${PVWARegistrationLog} -PVWASetLocalService
-                ${PVWASetLocalServiceLog} -Region ${AWS::Region}
+                ${PVWARegistrationLog} -Region ${AWS::Region}
             2-downloadLatestSSM:
               command: >
                 powershell.exe -Command
