Prevent PSM & CPM parallel

--- a/aws/Full-PAS-Deployment.yaml
+++ b/aws/Full-PAS-Deployment.yaml
@@ -1207,7 +1207,7 @@ Resources:
         Timeout: PT25M
     DeletionPolicy: Retain
     DependsOn:
-      - PVWAMachine
+      - CPMMachine
   PSMPMachine:
     Type: AWS::EC2::Instance
     Properties:
